--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -14,14 +14,14 @@
         {% endfor %}
     </ul>
 
-    {% if isUserAdmin(currentLdapUser) and servers %}
+    {% if isUserAdmin(currentUser) and servers %}
         <p><strong>Note:</strong> All associated servers must be removed or transferred to remove this environment.</p>
     {% endif %}
 
     <div>
-        {% if isUserAdmin(currentLdapUser) %}
+        {% if isUserAdmin(currentUser) %}
             <a class="btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
-            {% if not servers and canUserDelete(currentLdapUser) %}
+            {% if not servers and canUserDelete(currentUser) %}
                 <a class="btn--destructive secondary-action" href="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}">Remove Environment</a>
             {% endif %}
         {% endif %}
