--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -17,14 +17,14 @@
         {% endfor %}
     </ul>
 
-    {% if isUserAdmin(currentLdapUser) and deployments %}
+    {% if isUserAdmin(currentUser) and deployments %}
         <p><strong>Note:</strong> All associated deployments must be removed or transferred to remove this server.</p>
     {% endif %}
 
     <div>
-        {% if isUserAdmin(currentLdapUser) %}
+        {% if isUserAdmin(currentUser) %}
             <a class="btn--action" href="{{ urlFor('server.admin.edit', {id: server.id}) }}">Edit</a>
-            {% if not deployments and canUserDelete(currentLdapUser) %}
+            {% if not deployments and canUserDelete(currentUser) %}
                 <a class="btn--destructive secondary-action" href="{{ urlFor('server.admin.remove.handle', {id: server.id}) }}">Remove Server</a>
             {% endif %}
         {% endif %}
