--- a/app/templates/push/start.twig
+++ b/app/templates/push/start.twig
@@ -83,7 +83,7 @@
         before selecting which servers you wish to deploy to.
     </p>
 
-    <form action="{{ urlFor('push.handle', {'repo': build.repository.key, 'build': build.id}) }}" method="post">
+    <form action="{{ urlFor('push.start.handle', {'repo': build.repository.key, 'build': build.id}) }}" method="post">
     <div class="overflow-container">
         <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
