Add new push ID syntax
- Add dupe checker to builds and pushes and auto resolve to a new id when a dupe is found.
- Fix various broken things made in the previous commit
- Fix broken rollback page that wasn't correctly determining permissions
- Add query string support to UrlHelper
- Fix session flashes

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -89,9 +89,9 @@
 
     <main role="main">
         {% block flash %}
-            {% if session.hasFlash() %}
+            {% if session.flash(true) %}
                 <div class="alert-bar">
-                    {% for message in session.flash() %}
+                    {% for message in session.flash(false) %}
                         <p>{{ message|raw }}</p>
                     {% endfor %}
                 </div>
