--- a/app/templates/error.twig
+++ b/app/templates/error.twig
@@ -2,7 +2,7 @@
 
 {% set page_title = 'Error' %}
 
-{% set name = getUsersActualName(user) %}
+{% set name = getUsersActualName(currentUser) %}
 
 {% block content %}
 <div class="error-page">
