Have composer use classmap for deployments

--- a/app/templates/help/deployment.twig
+++ b/app/templates/help/deployment.twig
@@ -179,7 +179,7 @@ date: ''    # ISO 8601 date
         <tbody>
             <tr>
                 <td>Composer</td>
-                <td><code>composer install --no-dev --prefer-dist --no-interaction</code></td>
+                <td><code>composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader</code></td>
             </tr>
             <tr>
                 <td>NPM</td>
