Add add repository button to group page

--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -42,12 +42,7 @@
         </table>
 
     {% else %}
-        <p>
-            There are no repositories associated with this group.
-            {% if isUserAdmin(currentUser) %}
-                <br><a href="{{ urlFor('repository.admin.add') }}">Add a repository</a>
-            {% endif %}
-        </p>
+        <p>There are no repositories associated with this group.</p>
     {% endif %}
 
     {% if isUserAdmin(currentUser) and repos %}
@@ -57,11 +52,16 @@
     {% if isUserAdmin(currentUser) %}
         <ul class="choice-list--flush">
             <li class="choice-list__choice">
-                <a class="btn--action" href="{{ urlFor('group.admin.edit', {id: group.id}) }}">Edit</a></p>
+                <a class="btn" href="{{ urlFor('repository.admin.add') }}">Add Repository</a>
+            </li>
+            <li class="choice-list__choice">
+                <a class="btn--action secondary-action" href="{{ urlFor('group.admin.edit', {id: group.id}) }}">Edit Group</a></p>
             </li>
 
             {% if not repos and canUserDelete(currentUser) %}
+            <li class="choice-list__choice">
                 <a class="btn--destructive secondary-action" href="{{ urlFor('group.admin.remove.handle', {id: group.id}) }}">Remove Group</a>
+            </li>
             {% endif %}
         </ul>
     {% endif %}
